# inkscape

./: .appveyor.yml  .bzrignore  .cvsignore  .gitignore  .gitlab-ci.yml  .gitmessage  .snapcraft.yaml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog-0.48  ChangeLog-0.48.1  ChangeLog-0.48.2  ChangeLog-0.48.3  ChangeLog-0.48.3.1  ChangeLog-0.48.4  ChangeLog-0.48.5  HACKING  HACKING_de  INSTALL  INSTALL.md  Info.plist.in  Makefile.am  Makefile.mingw  Makefile.mingw.common  Makefile.mingw.common.in  Makefile.mingw.common.old  Makefile.mingw.common2  Makefile.mingw.old  Makefile.mingw2  NEWS  NEWS.md  README  README.fr  README.it  README_ca  README_de  README_fr  Sodipodi.dev  (+64 more)
doc/: DEVELOPERS  Makefile.am  WISHLIST  class-hierarchy.dia  coding-style.txt  coordinates.txt  extension_system.txt  keybindings.txt  keyboard-shortcuts.txt  keys-html.xsl  keys-svg.xsl  keys.README  keys.fr.html  keys.fr.xml  keys.html  keys.xml  nr-filter-interface.txt  sp2ink_rfe.gnumeric  sp_bugs.gnumeric
extensions/: Makefile.am  ai_input.inkmod  dia.inkmod  dropshadow.inkmod  ill2svg.pl  roundhole  roundhole.inkmod  svg_dropshadow  svgz_input.inkmod  svgz_output.inkmod  txt2svg.inkmod
glade/: Makefile.am  about_svg.tmpl  about_svg.tmpl~  about_svg.txt  add_xml_element_node.xpm  al_bottom_out.xpm  al_center_hor.xpm  al_center_ver.xpm  al_left_out.xpm  al_right_in.xpm  al_top_in.xpm  al_top_out.xpm  align_br.xpm  align_cr.xpm  align_tc.xpm  align_tr.xpm  angle_180.xpm  angle_any.xpm  arrows_hor.xpm  arrows_ver.xpm  cap_butt.xpm  del.xpm  div.xpm  draw_freehand.xpm  draw_rect.xpm  draw_zoom.xpm  dt_inactive.xpm  duplicate_xml_node.xpm  edge_down.xpm  edge_up.xpm  edit_copy.xpm  edit_paste.xpm  edit_redo.xpm  edit_undo.xpm  ellipse.xpm  file_import.xpm  file_print_direct.xpm  fill.xpm  fill_none.xpm  fill_pattern.xpm  (+47 more)
share/: CMakeLists.txt  Makefile.am
share/attributes/: svgprops
share/branding/: Makefile.am
share/clipart/: Makefile.am  README
share/examples/: Makefile.am  istest.pov  stars.svgz  tiger.svgz
share/extensions/: Makefile.am  addnodes.inx  addnodes.py  ai_input.inkmod  ai_input.inx  ai_output.inkmod  ai_output.inx  bezmisc.py  bluredge.inx  chardataeffect.py  color_HSL_adjust.py  color_custom.py  color_desaturate.py  color_lesshue.py  color_lesslight.py  color_lesssaturation.py  color_morehue.py  color_morelight.py  color_moresaturation.py  color_randomize.py  coloreffect.py  convert2dashes.py  cspsubdiv.py  dia.inkmod  dia.inx  dia2svg.sh  dimension.py  dm2svg.py  dots.inx  dots.py  dpiswitcher.py  draw_from_triangle.py  dropshadow.inkmod  dropshadow.inx  dxf_input.inx  dxf_input.py  dxf_outlines.py  dxf_output.inx  edge3d.py  embedimage.inx  (+162 more)
share/filters/: CMakeLists.txt
share/fonts/: LiberationSansMonoDigits.sfd
share/icons/: CMakeLists.txt  Makefile.am  Makefile.in  README  README.icons  al_bottom_in.xpm  al_right_out.xpm  align_cc.xpm  angle_270.xpm  cap_round.xpm  cap_square.xpm  clear.xpm  create_new.xpm  cusp.xpm  dimension_ver.xpm  draw_ellipse.xpm  draw_node.xpm  draw_pen.xpm  draw_select.xpm  draw_spiral.xpm  draw_star.xpm  dt_active.xpm  edit_cut.xpm  file_new.xpm  file_open.xpm  file_print.xpm  file_print_preview.xpm  file_save_as.xpm  fill_radial.xpm  iconshowcase.py  lock_aspect_no.xpm  object_flip_hor.xpm  object_layout.xpm  properties_layout.xpm  properties_stroke.xpm  quit_yep.xpm  rect.xpm  reread.xpm  rotate.xpm  rotate_right.xpm  (+11 more)
share/keys/: acd-canvas.xml  adobe-illustrator-cs2.xml  carbon.xml  corel-draw-x4.xml  corel-draw-x8.xml  default.xml  inkscape.xml  macromedia-freehand-mx.xml  right-handed-illustration.xml  xara.xml  zoner-draw.xml
share/livedata/: Makefile.am  README  updates.xml
share/markers/: Makefile.am
share/palettes/: CMakeLists.txt  Makefile.am  svg.gpl
share/patterns/: CMakeLists.txt
share/screens/: Makefile.am  Makefile.in  TRANSLATING  about_svg.txt
share/symbols/: CMakeLists.txt
share/templates/: CMakeLists.txt  Makefile.am  README  create_defaults.pl
share/themes/: CMakeLists.txt
share/tutorials/: Makefile.am
share/ui/: Adwaita-dark.css  Adwaita.css  CMakeLists.txt  Makefile.am  Minwaita-Inkscape-Dark.css  Minwaita-Inkscape.css  Windows-10.css  align-and-distribute.ui  dialog-export.glade  dialog-trace.glade  gradient-edit.glade  inkscape-start.glade  keybindings.rc  marker-popup.glade  menu-edit.ui  menu-effect.ui  menu-file.ui  menu-filter.ui  menu-help.ui  menu-layer.ui  menu-object.ui  menu-path.ui  menu-text.ui  menu-view.ui  menus-bars.xml  menus.ui  menus.xml  nix.css  page-properties.glade  select-toolbar.ui  spinbutton.css  style.css  toolbar-commands.ui  toolbar-node.ui  toolbar-page.ui  toolbar-select.ui  toolbar-snap.ui  toolbar-tool-prefs.ui  toolbar-tool.ui  win32.css  (+1 more)
src/: .cvsignore  CMakeLists.txt  Doxyfile  FilePath.cpp  FilePath.h  Makefile.am  Makefile.mingw  Makefile.mingw2  Makefile_insert  alignment-snapper.cpp  alignment-snapper.h  application.cpp  application.h  approx-equal.h  arc-context.c  arc-context.cpp  arc-context.h  arena-drawable.cpp  arena-drawable.h  attribute-rel-util.cpp  attribute-sort-util.cpp  attributes-test.cpp  attributes-test.h  attributes.c  attributes.cpp  attributes.h  auto-save.cpp  bad-uri-exception.h  box3d-context.cpp  box3d-side.cpp  canvas-guidable.cpp  canvas-guidable.h  check-header-compile.in  color-profile-fns.h  color-profile.cpp  color-profile.h  color-rgba.h  color.c  color.cpp  color.h  (+533 more)
src/2geom/: elliptical-arc.cpp  elliptical-arc.h  interval.h  math-utils.h  rect.h  solve-bezier-parametric.cpp  svg-elliptical-arc.h
src/actions/: CMakeLists.txt  README  actions-base.cpp  actions-canvas-mode.cpp  actions-canvas-snapping.cpp  actions-canvas-snapping.h  actions-canvas-transform.cpp  actions-canvas-transform.h  actions-dialogs.cpp  actions-dialogs.h  actions-doc-file.cpp  actions-doc-file.h  actions-edit-document.cpp  actions-edit-document.h  actions-edit-window.cpp  actions-edit-window.h  actions-edit.cpp  actions-edit.h  actions-effect-data.cpp  actions-effect-data.h  actions-effect.cpp  (+55 more)
testfiles/: CMakeLists.txt  lpespaths-test.h
(+3017 files in other folders)
